Aggiunti esercizi JS exercism

--- a/exercism/exercism/javascript.html
+++ b/exercism/exercism/javascript.html
@@ -32,14 +32,53 @@
     <div class="mainPage">
       <h2 class="mainTitle">I miei esercizi JavaScript</h2>
       <div id="allProjectsContainer">
-        <a class="projectContainer" href="https://exercism.io/tracks/cpp/exercises/leap/solutions/cf6231784ad347dab4505c9b728f76f9" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+        <a class="projectContainer" href="https://exercism.io/tracks/javascript/exercises/pangram/solutions/c867564d6f6340fcbcbaa00803d25406" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Pangram</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Determine if a sentence is a pangram.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/javascript/exercises/space-age/solutions/a45ca716f5f348f29d8cb074129927ce" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Space Age</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Given an age in seconds, calculate how old someone would be on different planets.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/javascript/exercises/triangle/solutions/aea515d134b74d8fb7453a758b1956ed" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Triangle</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Determine if a triangle is equilateral, isosceles, or scalene.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/javascript/exercises/collatz-conjecture/solutions/a8f7c12feffc4d1a9752ef6e0c07bf1d" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Collatz Conjecture</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Given a number n, return the number of steps required to reach 1.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/javascript/exercises/resistor-color-duo/solutions/4f656f8a7fce483c8bdc15b0d04bc4b9" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Resistor Color Duo</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">In this exercise you are going to create a helpful program so that you don't have to remember the values of the bands.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/javascript/exercises/two-fer/solutions/650b0df40f6f4835aeef730af0538472" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">TwoFer</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Two-fer or 2-fer is short for two for one. One for you and one for me.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/javascript/exercises/rna-transcription/solutions/e51b50d141dc42e08d5e2bec7ba10f32" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">RNA Transcription</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Given a DNA strand, return its RNA complement (per RNA transcription).</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/javascript/exercises/resistor-color/solutions/65b50d19d52a428faca1e99472796708" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Resistor Colors</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Resistors have color coded bands, where each color maps to a number.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/javascript/exercises/gigasecond/solutions/8a5c6f4711804584a1513a43585085e3" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Gigasecond</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Given a moment, determine the moment that would be after a gigasecond has passed.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/javascript/exercises/leap/solutions/84104a4de9904d51812423a7e4fded44" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
             <p class="projectName slideToDown makeAppear appear">Leap</p>
-            <p class="projectDescription slideToUp makeDisappear disappear">Given a year, report if this is a leap year.</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Given a year, report if it is a leap year.</p>
+        </a>
+        <a class="projectContainer" href="https://exercism.io/tracks/javascript/exercises/reverse-string/solutions/cff1d1882307454b8d3d32305e30245c" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Reverse String</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Reverse a string.</p>
         </a>
 
       </div>
     </div>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="../../public/js/index.js"></script>
   <script src="../../public/js/fade.js"></script>
   <script src="../../public/js/slide.js"></script>
