--- a/exercism/exercism/javascript.html
+++ b/exercism/exercism/javascript.html
@@ -3,7 +3,7 @@
 <html lang="it">
 <head>
   <meta charset="utf-8">
-  <title>Less Homepage</title>
+  <title>Less Exercism JS</title>
   <meta name="description" content="Less C++ reference">
   <meta name="author" content="Less">
   <link rel="stylesheet" href="../../public/css/index.css">
@@ -20,7 +20,7 @@
         <div id="logo" onmousedown="toPage('../../index.html')">L</div>
         <p id="logoName">Less</p>
         <p><i class="fas fa-envelope" style="margin-right: .4rem;"></i>alessiocellucci.dev@gmail.com</p>
-        <a href="#githubpage"><i class="fab fa-github" style="margin-right: .4rem;"></i>less-hub</a>
+        <a href="https://github.com/less-hub/" target="_blank"><i class="fab fa-github" style="margin-right: .4rem;"></i>less-hub</a>
         <nav id="navigator">
             <li><a href="../../index.html">Home</a></li>
             <i class="fas fa-angle-double-down" style="padding-top: 3%; color: #fbfff1;"></i>
