--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="logo" onmousedown="toPage('index.html')">L</div>
         <p id="logoName">Less</p>
         <p><i class="fas fa-envelope" style="margin-right: .4rem;"></i>alessiocellucci.dev@gmail.com</p>
-        <a href="#githubpage"><i class="fab fa-github" style="margin-right: .4rem;"></i>less-hub</a>
+        <a href="https://github.com/less-hub/" target="_blank"><i class="fab fa-github" style="margin-right: .4rem;"></i>less-hub</a>
         <nav id="navigator">
           <li><a href="index.html" class="active">Home</a></li>
         </nav>
