Aggiunto questo sito all index

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div id="allProjectsContainer">
         <div class="projectContainer" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)" onmousedown="toPage('cpp/cpp.html')">
             <p class="projectName slideToDown makeAppear appear">C++ Reference</p>
-            <p class="projectDescription slideToUp makeDisappear disappear">Un riassunto dei costrutti principali del C++, scendendo mano a mano nel dettaglio cosi da avere una visione generale del linguaggio.</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Un riassunto dei costrutti principali del C++, scendendo mano a mano nel dettaglio cosi da avere una visione generale del linguaggio. Ancora in fase di sviluppo.</p>
             <p class="projectLanguages slideToUp makeDisappear disappear">C++</p>
         </div>
         <div class="projectContainer" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)" onmousedown="toPage('exercism/exercism.html')">
@@ -42,6 +42,11 @@
             <p class="projectName slideToDown makeAppear appear">Emulatore Pokèmon</p>
             <p class="projectDescription slideToUp makeDisappear disappear">Un semplice emulatore Pokèmon. Ancora in fase di sviluppo.</p>
             <p class="projectLanguages slideToUp makeDisappear disappear">Ruby, Ruby2d, Gosu</p>
+        </a>
+        <a class="projectContainer" href="https://github.com/less-hub/less-hub.github.io" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+            <p class="projectName slideToDown makeAppear appear">Questo sito</p>
+            <p class="projectDescription slideToUp makeDisappear disappear">Un sito per tenere traccia dei miei progressi.</p>
+            <p class="projectLanguages slideToUp makeDisappear disappear">HTML, CSS, JS, JQuery</p>
         </a>
       </div>
     </div>
