--- a/cpp/parts/1.html
+++ b/cpp/parts/1.html
@@ -80,5 +80,6 @@
     </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="../../public/js/index.js"></script>
+  <script src="../../public/js/precodelayout.js"></script>
 </body>
 </html>
