Bugfixes minori per mobile e PC

--- a/exercism/exercism.html
+++ b/exercism/exercism.html
@@ -31,7 +31,7 @@
     </header>
     <div class="mainPage">
       <h2 class="mainTitle">I miei esercizi su <a href="https://exercism.io/" target="_blank">exercism.io</a></h2>
-      <div id="allLanguagesContainer">
+      <div class="allLanguagesContainer">
         <a class="languageContainer makeContainerShorter shorterContainer" onmouseover="containerHeight(this); containerLanguageDescriptionOn(this);" onmouseout="containerHeight(this); containerLanguageDescriptionOff(this);" href="exercism/cpp.html">
             <p class="languageName slideToDown makeAppear appear">C++</p>
             <p class="languageDescriptionTitle slideToUp makeDisappear disappear">C++</p>
