--- a/exercism/exercism/csharp.html
+++ b/exercism/exercism/csharp.html
@@ -31,7 +31,7 @@
     </header>
     <div class="mainPage">
       <h2 class="mainTitle">I miei esercizi C#</h2>
-      <div id="allProjectsContainer">
+      <div class="allProjectsContainer">
         <a class="projectContainer" href="https://exercism.io/tracks/csharp/exercises/strain/solutions/d8620a30eb7c4770954274e27c62f546" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
             <p class="projectName slideToDown makeAppear appear">Strain</p>
             <p class="projectDescription slideToUp makeDisappear disappear">Implement the keep and discard operation on collections.</p>
