--- a/exercism/exercism/javascript.html
+++ b/exercism/exercism/javascript.html
@@ -31,7 +31,7 @@
     </header>
     <div class="mainPage">
       <h2 class="mainTitle">I miei esercizi JavaScript</h2>
-      <div id="allProjectsContainer">
+      <div class="allProjectsContainer">
         <a class="projectContainer" href="https://exercism.io/tracks/javascript/exercises/pangram/solutions/c867564d6f6340fcbcbaa00803d25406" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
             <p class="projectName slideToDown makeAppear appear">Pangram</p>
             <p class="projectDescription slideToUp makeDisappear disappear">Determine if a sentence is a pangram.</p>
