--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <div class="mainPage">
       <h2 class="mainTitle">I miei progetti</h2>
-      <div id="allProjectsContainer" class="mobileHide">
+      <div class="allProjectsContainer mobileHide">
         <div class="projectContainer" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)" onmousedown="toPage('cpp/cpp.html')">
             <p class="projectName slideToDown makeAppear appear">C++ Reference</p>
             <p class="projectDescription slideToUp makeDisappear disappear">Un riassunto dei costrutti principali del C++, scendendo mano a mano nel dettaglio cosi da avere una visione generale del linguaggio. Ancora in fase di sviluppo.</p>
