--- a/exercism/exercism/cpp.html
+++ b/exercism/exercism/cpp.html
@@ -31,7 +31,7 @@
     </header>
     <div class="mainPage">
       <h2 class="mainTitle">I miei esercizi C++</h2>
-      <div id="allProjectsContainer">
+      <div class="allProjectsContainer">
         <a class="projectContainer" href="https://exercism.io/tracks/cpp/exercises/leap/solutions/cf6231784ad347dab4505c9b728f76f9" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
             <p class="projectName slideToDown makeAppear appear">Leap</p>
             <p class="projectDescription slideToUp makeDisappear disappear">Given a year, report if this is a leap year.</p>
