Mobile: aggiunto CSS per il button index

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <p class="projectDescription slideToUp makeDisappear disappear">Un riassunto dei costrutti principali del C++, scendendo mano a mano nel dettaglio cosi da avere una visione generale del linguaggio. Ancora in fase di sviluppo.</p>
               <p class="projectLanguages slideToUp makeDisappear disappear">C++</p>
           </div>
-          <input type="button" onclick="toggleContentMobile(0);" value="+">
+          <input class="projectButton" type="button" onclick="toggleContentMobile(0);" value="+">
         </div>
       </div>
     </div>
