Mobile: aggiunti gli elementi in index

--- a/index.html
+++ b/index.html
@@ -58,6 +58,30 @@
           </div>
           <input class="projectButton" type="button" onclick="toggleContentMobile(0);" value="+">
         </div>
+        <div class="projectContainerMobile mobileShow">
+          <div class="projectContainer" onmousedown="toPage('exercism/exercism.html')">
+              <p class="projectName slideToDown makeAppear appear">Exercism</p>
+              <p class="projectDescription slideToUp makeDisappear disappear">Una collezione degli esercizi che ho svolto sulla piattaforma exercism.io</p>
+              <p class="projectLanguages slideToUp makeDisappear disappear">C++, C#, JavaScript</p>
+          </div>
+          <input class="projectButton" type="button" onclick="toggleContentMobile(1);" value="+">
+        </div>
+        <div class="projectContainerMobile mobileShow">
+          <a class="projectContainer" href="https://github.com/less-hub/less-Pokemulator#table-of-contents">
+              <p class="projectName slideToDown makeAppear appear">Emulatore Pokèmon</p>
+              <p class="projectDescription slideToUp makeDisappear disappear">Un semplice emulatore Pokèmon. Ancora in fase di sviluppo.</p>
+              <p class="projectLanguages slideToUp makeDisappear disappear">C++</p>
+          </a>
+          <input class="projectButton" type="button" onclick="toggleContentMobile(2);" value="+">
+        </div>
+        <div class="projectContainerMobile mobileShow">
+          <a class="projectContainer" href="https://github.com/less-hub/less-hub.github.io">
+              <p class="projectName slideToDown makeAppear appear">less-hub.github.io</p>
+              <p class="projectDescription slideToUp makeDisappear disappear">Un sito per tenere traccia dei miei progressi.</p>
+              <p class="projectLanguages slideToUp makeDisappear disappear">HTML, CSS, JS, JQuery</p>
+          </a>
+          <input class="projectButton" type="button" onclick="toggleContentMobile(3);" value="+">
+        </div>
     </div>
   <script src="public/js/index.js"></script>
   <script src="public/js/fade.js"></script>
