--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
           <input class="projectButton" type="button" onclick="toggleContentMobile(3);" value="+">
         </div>
     </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="public/js/index.js"></script>
   <script src="public/js/fade.js"></script>
   <script src="public/js/slide.js"></script>
