--- a/index.html
+++ b/index.html
@@ -26,63 +26,65 @@
         </nav>
     </header>
     <div class="mainPage">
-      <h2 class="mainTitle mobileHide">I miei progetti</h2>
-      <div class="allProjectsContainer mobileHide">
-        <div class="projectContainer" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)" onmousedown="toPage('cpp/cpp.html')">
-            <p class="projectName slideToDown makeAppear appear">C++ Reference</p>
-            <p class="projectDescription slideToUp makeDisappear disappear">Un riassunto dei costrutti principali del C++, scendendo mano a mano nel dettaglio cosi da avere una visione generale del linguaggio. Ancora in fase di sviluppo.</p>
-            <p class="projectLanguages slideToUp makeDisappear disappear">C++</p>
+        <h2 class="mainTitle mobileHide">I miei progetti</h2>
+        <div class="allProjectsContainer mobileHide">
+          <div class="projectContainer" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)" onmousedown="toPage('cpp/cpp.html')">
+              <p class="projectName slideToDown makeAppear appear">C++ Reference</p>
+              <p class="projectDescription slideToUp makeDisappear disappear">Un riassunto dei costrutti principali del C++, scendendo mano a mano nel dettaglio cosi da avere una visione generale del linguaggio. Ancora in fase di sviluppo.</p>
+              <p class="projectLanguages slideToUp makeDisappear disappear">C++</p>
+          </div>
+          <div class="projectContainer" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)" onmousedown="toPage('exercism/exercism.html')">
+              <p class="projectName slideToDown makeAppear appear">Exercism</p>
+              <p class="projectDescription slideToUp makeDisappear disappear">Una collezione degli esercizi che ho svolto sulla piattaforma exercism.io</p>
+              <p class="projectLanguages slideToUp makeDisappear disappear">C++, C#, JavaScript</p>
+          </div>
+          <a class="projectContainer" href="https://github.com/less-hub/less-Pokemulator#table-of-contents" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+              <p class="projectName slideToDown makeAppear appear">Emulatore Pokèmon</p>
+              <p class="projectDescription slideToUp makeDisappear disappear">Un semplice emulatore Pokèmon. Ancora in fase di sviluppo.</p>
+              <p class="projectLanguages slideToUp makeDisappear disappear">Ruby, Ruby2d, Gosu</p>
+          </a>
+          <a class="projectContainer" href="https://github.com/less-hub/less-hub.github.io" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
+              <p class="projectName slideToDown makeAppear appear">less-hub.github.io</p>
+              <p class="projectDescription slideToUp makeDisappear disappear">Un sito per tenere traccia dei miei progressi.</p>
+              <p class="projectLanguages slideToUp makeDisappear disappear">HTML, CSS, JS, JQuery</p>
+          </a>
         </div>
-        <div class="projectContainer" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)" onmousedown="toPage('exercism/exercism.html')">
-            <p class="projectName slideToDown makeAppear appear">Exercism</p>
-            <p class="projectDescription slideToUp makeDisappear disappear">Una collezione degli esercizi che ho svolto sulla piattaforma exercism.io</p>
-            <p class="projectLanguages slideToUp makeDisappear disappear">C++, C#, JavaScript</p>
-        </div>
-        <a class="projectContainer" href="https://github.com/less-hub/less-Pokemulator#table-of-contents" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
-            <p class="projectName slideToDown makeAppear appear">Emulatore Pokèmon</p>
-            <p class="projectDescription slideToUp makeDisappear disappear">Un semplice emulatore Pokèmon. Ancora in fase di sviluppo.</p>
-            <p class="projectLanguages slideToUp makeDisappear disappear">Ruby, Ruby2d, Gosu</p>
-        </a>
-        <a class="projectContainer" href="https://github.com/less-hub/less-hub.github.io" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
-            <p class="projectName slideToDown makeAppear appear">less-hub.github.io</p>
-            <p class="projectDescription slideToUp makeDisappear disappear">Un sito per tenere traccia dei miei progressi.</p>
-            <p class="projectLanguages slideToUp makeDisappear disappear">HTML, CSS, JS, JQuery</p>
-        </a>
       </div>
 
       <div class="headerMobile mobileShow">
         <h2 class="mainTitle">I miei progetti</h2>
         <div class="menuButton" onmousedown="showMobileMenu();"><i class="fas fa-bars"></i></div>
       </div>
-        <div class="projectContainerMobile mobileShow">
-          <div class="projectContainer" onmousedown="toPage('cpp/cpp.html')">
-              <p class="projectName slideToDown makeAppear appear">C++ Reference</p>
-              <p class="projectDescription slideToUp makeDisappear disappear">Un riassunto dei costrutti principali del C++, scendendo mano a mano nel dettaglio cosi da avere una visione generale del linguaggio. Ancora in fase di sviluppo.</p>
+      <div class="scrollableMobile">
+          <div class="projectContainerMobile mobileShow">
+            <div class="projectContainer" onmousedown="toPage('cpp/cpp.html')">
+                <p class="projectName slideToDown makeAppear appear">C++ Reference</p>
+                <p class="projectDescription slideToUp makeDisappear disappear">Un riassunto dei costrutti principali del C++, scendendo mano a mano nel dettaglio cosi da avere una visione generale del linguaggio. Ancora in fase di sviluppo.</p>
+            </div>
+            <input class="projectButton" type="button" onclick="toggleContentMobile(0);" value="+">
           </div>
-          <input class="projectButton" type="button" onclick="toggleContentMobile(0);" value="+">
-        </div>
-        <div class="projectContainerMobile mobileShow">
-          <div class="projectContainer" onmousedown="toPage('exercism/exercism.html')">
-              <p class="projectName slideToDown makeAppear appear">Exercism</p>
-              <p class="projectDescription slideToUp makeDisappear disappear">Una collezione degli esercizi che ho svolto sulla piattaforma exercism.io</p>
+          <div class="projectContainerMobile mobileShow">
+            <div class="projectContainer" onmousedown="toPage('exercism/exercism.html')">
+                <p class="projectName slideToDown makeAppear appear">Exercism</p>
+                <p class="projectDescription slideToUp makeDisappear disappear">Una collezione degli esercizi che ho svolto sulla piattaforma exercism.io</p>
+            </div>
+            <input class="projectButton" type="button" onclick="toggleContentMobile(1);" value="+">
           </div>
-          <input class="projectButton" type="button" onclick="toggleContentMobile(1);" value="+">
+          <div class="projectContainerMobile mobileShow">
+            <a class="projectContainer" href="https://github.com/less-hub/less-Pokemulator#table-of-contents">
+                <p class="projectName slideToDown makeAppear appear">Emulatore Pokèmon</p>
+                <p class="projectDescription slideToUp makeDisappear disappear">Un semplice emulatore Pokèmon. Ancora in fase di sviluppo.</p>
+            </a>
+            <input class="projectButton" type="button" onclick="toggleContentMobile(2);" value="+">
+          </div>
+          <div class="projectContainerMobile mobileShow">
+            <a class="projectContainer" href="https://github.com/less-hub/less-hub.github.io">
+                <p class="projectName slideToDown makeAppear appear">less-hub.github.io</p>
+                <p class="projectDescription slideToUp makeDisappear disappear">Un sito per tenere traccia dei miei progressi.</p>
+            </a>
+            <input class="projectButton" type="button" onclick="toggleContentMobile(3);" value="+">
+          </div>
         </div>
-        <div class="projectContainerMobile mobileShow">
-          <a class="projectContainer" href="https://github.com/less-hub/less-Pokemulator#table-of-contents">
-              <p class="projectName slideToDown makeAppear appear">Emulatore Pokèmon</p>
-              <p class="projectDescription slideToUp makeDisappear disappear">Un semplice emulatore Pokèmon. Ancora in fase di sviluppo.</p>
-          </a>
-          <input class="projectButton" type="button" onclick="toggleContentMobile(2);" value="+">
-        </div>
-        <div class="projectContainerMobile mobileShow">
-          <a class="projectContainer" href="https://github.com/less-hub/less-hub.github.io">
-              <p class="projectName slideToDown makeAppear appear">less-hub.github.io</p>
-              <p class="projectDescription slideToUp makeDisappear disappear">Un sito per tenere traccia dei miei progressi.</p>
-          </a>
-          <input class="projectButton" type="button" onclick="toggleContentMobile(3);" value="+">
-        </div>
-    </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="public/js/index.js"></script>
   <script src="public/js/fade.js"></script>
