Mobile: bugfixes minori su scroll

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2 class="mainTitle">I miei progetti</h2>
         <div class="menuButton" onmousedown="showMobileMenu();"><i class="fas fa-bars"></i></div>
       </div>
-      <div class="scrollableMobile">
+      <div id="scrollableMobile">
           <div class="projectContainerMobile mobileShow">
             <div class="projectContainer" onmousedown="toPage('cpp/cpp.html')">
                 <p class="projectName slideToDown makeAppear appear">C++ Reference</p>
