Mobile: fixato display c++ reference index

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
         <div class="menuButton" onmousedown="showMobileMenu();"><i class="fas fa-bars"></i></div>
       </div>
       <div id="scrollableMobile">
-          <div class="projectContainerMobile mobileShow">
-            <div class="projectContainer" onmousedown="toPage('cpp/cpp.html')">
-                <p class="projectName slideToDown makeAppear appear">C++ Reference</p>
-                <p class="projectDescription slideToUp makeDisappear disappear">Un riassunto dei costrutti principali del C++, scendendo mano a mano nel dettaglio cosi da avere una visione generale del linguaggio. Ancora in fase di sviluppo.</p>
-            </div>
-            <input class="projectButton" type="button" onclick="toggleContentMobile(0);" value="+">
+        <div class="projectContainerMobile mobileShow">
+          <div class="projectContainer" onmousedown="toPage('exercism/exercism.html')">
+              <p class="projectName slideToDown makeAppear appear">C++ Reference</p>
+              <p class="projectDescription slideToUp makeDisappear disappear">Un riassunto dei costrutti principali del C++. Ancora in fase di sviluppo.</p>
           </div>
+          <input class="projectButton" type="button" onclick="toggleContentMobile(0);" value="+">
+        </div>
           <div class="projectContainerMobile mobileShow">
             <div class="projectContainer" onmousedown="toPage('exercism/exercism.html')">
                 <p class="projectName slideToDown makeAppear appear">Exercism</p>
