Mobile: aggiunti effetti CSS ai button e cambiato colore al titolo

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <div class="headerMobile mobileShow">
         <h2 class="mainTitle">I miei progetti</h2>
-        <div class="menuButton" onmousedown="showMobileMenu();"><i class="fas fa-bars"></i></div>
+        <div class="menuButton" onmousedown="showMobileMenu();"><i class="fas fa-bars" style="color: var(--main-black)"></i></div>
       </div>
       <div id="scrollableMobile">
         <div class="projectContainerMobile mobileShow">
