--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           <li><a href="index.html" class="active">Home</a></li>
         </nav>
     </header>
-    <div class="mainPage">
-        <h2 class="mainTitle mobileHide">I miei progetti</h2>
-        <div class="allProjectsContainer mobileHide">
+    <div class="mainPage mobileHide">
+        <h2 class="mainTitle">I miei progetti</h2>
+        <div class="allProjectsContainer">
           <div class="projectContainer" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)" onmousedown="toPage('cpp/cpp.html')">
               <p class="projectName slideToDown makeAppear appear">C++ Reference</p>
               <p class="projectDescription slideToUp makeDisappear disappear">Un riassunto dei costrutti principali del C++, scendendo mano a mano nel dettaglio cosi da avere una visione generale del linguaggio. Ancora in fase di sviluppo.</p>
