Ottimizzazione switch tra versione mobile e desktop

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
       <div id="scrollableMobile">
         <div class="projectContainerMobile mobileShow">
-          <div class="projectContainer" onmousedown="toPage('exercism/exercism.html')">
+          <div class="projectContainer" onmousedown="toPage('cpp/cpp.html')">
               <p class="projectName slideToDown makeAppear appear">C++ Reference</p>
               <p class="projectDescription slideToUp makeDisappear disappear">Un riassunto dei costrutti principali del C++. Ancora in fase di sviluppo.</p>
           </div>
