--- a/cpp/cpp.html
+++ b/cpp/cpp.html
@@ -27,7 +27,7 @@
             <li><a href="cpp.html" class="active">C++ Reference</a></li>
         </nav>
     </header>
-    <div class="mainPage">
+    <div class="mainPage mobileHide">
       <h2 class="mainTitle">C++ Reference</h2>
       <div class="allPartsContainer">
         <div class="partContainer makeContainerSmaller smallerContainer" onmouseover="containerWidth(this); containerPartIndexOn(this);" onmouseout="containerWidth(this); containerPartIndexOff(this);" onmousedown="toPage('#part1')">
@@ -93,6 +93,8 @@
         </div>
       </div>
     </div>
+
+    
     <script src="../public/js/index.js"></script>
     <script src="../public/js/fade.js"></script>
     <script src="../public/js/slide.js"></script>
