Mobile: fixato link pokemon emulator

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <input class="projectButton" type="button" onclick="toggleContentMobile(1);" value="+">
           </div>
           <div class="projectContainerMobile mobileShow">
-            <a class="projectContainer" href="https://github.com/less-hub/less-Pokemulator#table-of-contents">
+            <a class="projectContainer" href="https://github.com/less-hub/less-Pokemulator">
                 <p class="projectName slideToDown makeAppear appear">Emulatore Pokèmon</p>
                 <p class="projectDescription slideToUp makeDisappear disappear">Un semplice emulatore Pokèmon. Ancora in fase di sviluppo.</p>
             </a>
