--- a/cpp/parts/1.html
+++ b/cpp/parts/1.html
@@ -6,6 +6,7 @@
   <title>Less C++ Reference part 1</title>
   <meta name="description" content="Less C++ part 1">
   <meta name="author" content="Less">
+  <link rel="stylesheet" href="../../public/css/index.css">
   <link rel="stylesheet" href="../../public/css/header.css">
   <link rel="stylesheet" href="../../public/css/animations.css">
   <link rel="stylesheet" href="../../public/css/css/all.css">
@@ -35,13 +36,119 @@
         </nav>
     </header>
     <div class="mainPage">
-      <h2 id="intro" class="mainTitle">C++ Parte 1</h2>
+      <h2 id="intro" class="mainTitle mobileHide">C++ Parte 1</h2>
+      <div class="headerMobile mobileShow">
+        <h2 class="mainTitle">C++ Parte 1</h2>
+        <div class="menuButton" onmousedown="showMobileMenu();"><i class="fas fa-bars" style="color: var(--main-black)"></i></div>
+      </div>
       <p>
         Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
         labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
         Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
         sunt in culpa qui officia deserunt mollit anim id est laborum.
       </p>
+
+      <!-- Chapter -->
+      <div id="ipsum" class="chapter">
+        <h3>lorem ipsum sit amet</h3>
+        <p>
+          Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+          sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <div class="codeContainer">
+          <div class="codeAndLabel">
+            <p class="codeLabel">Listato 1.0</p>
+            <pre><code>
+              int x = 2;
+              x * x = 7;
+              x = func(2, "sksk");
+
+              <strong>if(x == 7)</strong>
+                return true;
+            </code></pre>
+          </div>
+          <div class="codeCommentsContainer">
+            <p class="codeCommentHead">Commenti:</p>
+            <ul class="codeComment">
+              <li>
+                Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                labore et dolore magna aliqua. Ut enim ad minim veniam,
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- End of chapter -->
+
+      <!-- Chapter -->
+      <div id="ipsum" class="chapter">
+        <h3>lorem ipsum sit amet</h3>
+        <p>
+          Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+          sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <div class="codeContainer">
+          <div class="codeAndLabel">
+            <p class="codeLabel">Listato 1.0</p>
+            <pre><code>
+              int x = 2;
+              x * x = 7;
+              x = func(2, "sksk");
+
+              <strong>if(x == 7)</strong>
+                return true;
+            </code></pre>
+          </div>
+          <div class="codeCommentsContainer">
+            <p class="codeCommentHead">Commenti:</p>
+            <ul class="codeComment">
+              <li>
+                Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                labore et dolore magna aliqua. Ut enim ad minim veniam,
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- End of chapter -->
+
+      <!-- Chapter -->
+      <div id="ipsum" class="chapter">
+        <h3>lorem ipsum sit amet</h3>
+        <p>
+          Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
+          sunt in culpa qui officia deserunt mollit anim id est laborum.
+        </p>
+        <div class="codeContainer">
+          <div class="codeAndLabel">
+            <p class="codeLabel">Listato 1.0</p>
+            <pre><code>
+              int x = 2;
+              x * x = 7;
+              x = func(2, "sksk");
+
+              <strong>if(x == 7)</strong>
+                return true;
+            </code></pre>
+          </div>
+          <div class="codeCommentsContainer">
+            <p class="codeCommentHead">Commenti:</p>
+            <ul class="codeComment">
+              <li>
+                Questa parte parla di tut cos bell Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut
+                labore et dolore magna aliqua. Ut enim ad minim veniam,
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <!-- End of chapter -->
 
       <!-- Chapter -->
       <div id="ipsum" class="chapter">
