Mobile: Tolto index dal menu in C++ part

--- a/cpp/parts/1.html
+++ b/cpp/parts/1.html
@@ -27,8 +27,8 @@
             <li><a href="../cpp.html">C++ Reference</a></li>
             <i class="fas fa-angle-double-down" style="padding-top: 3%; color: #fbfff1;"></i>
             <li><a href="1.html" class="active">Parte 1</a></li>
-            <i class="fas fa-angle-double-down" style="padding-top: 3%; color: #fbfff1;"></i>
-            <li class="navigatorIndexContainer">
+            <i class="fas fa-angle-double-down mobileHide" style="padding-top: 3%; color: #fbfff1;"></i>
+            <li class="navigatorIndexContainer mobileHide">
               <ul class="navigatorIndex">
                 <li><a href="#intro">Introduzione</a></li>
               </ul>
