Mobile: C++ part rimosso ultima arrow nell header

--- a/cpp/parts/1.html
+++ b/cpp/parts/1.html
@@ -27,7 +27,7 @@
             <li><a href="../cpp.html">C++ Reference</a></li>
             <i class="fas fa-angle-double-down menuArrowDown" style="padding-top: 3%; color: #fbfff1;"></i>
             <li><a href="1.html" class="active">Parte 1</a></li>
-            <i class="fas fa-angle-double-down menuArrowDown mobileHide" style="padding-top: 3%; color: #fbfff1;"></i>
+            <i class="fas fa-angle-double-down menuArrowDown" id="toRemoveMobile" style="padding-top: 3%; color: #fbfff1;"></i>
             <li class="navigatorIndexContainer mobileHide">
               <ul class="navigatorIndex">
                 <li><a href="#intro">Introduzione</a></li>
