--- a/exercism/exercism/javascript.html
+++ b/exercism/exercism/javascript.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="../../public/css/animations/fade.css">
   <link rel="stylesheet" href="../../public/css/animations/slide.css">
   <link rel="stylesheet" href="../../public/css/header.css">
+  <link rel="stylesheet" href="../../public/css/exercismexercises.css">
   <link rel="stylesheet" href="../../public/css/css/all.css">
   <link href="https://fonts.googleapis.com/css?family=Muli&display=swap" rel="stylesheet">
 </head>
@@ -29,8 +30,13 @@
             <li><a href="cpp.html" class="active">JavaScript</a></li>
         </nav>
     </header>
-    <div class="mainPage">
+    <div class="headerMobile mobileShow">
       <h2 class="mainTitle">I miei esercizi JavaScript</h2>
+      <div class="menuButton" onmousedown="showMobileMenu();"><i class="fas fa-bars" style="color: var(--main-black)"></i></div>
+    </div>
+    <div class="mainPage">
+      <h2 id="intro" class="mainTitle mobileHide">I miei esercizi JavaScript</h2>
+      <div id="scrollableMobile">
       <div class="allProjectsContainer">
         <a class="projectContainer" href="https://exercism.io/tracks/javascript/exercises/pangram/solutions/c867564d6f6340fcbcbaa00803d25406" target="_blank" onmouseover="toggleContent(this)" onmouseout="toggleContent(this)">
             <p class="projectName slideToDown makeAppear appear">Pangram</p>
@@ -79,6 +85,8 @@
 
       </div>
     </div>
+  </div>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="../../public/js/index.js"></script>
   <script src="../../public/js/fade.js"></script>
   <script src="../../public/js/slide.js"></script>
